--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "bot_squash",
   "private": true,
   "dependencies": {
-    "@rails/webpacker": "3.5"
+    "@rails/webpacker": "3.5",
+    "jquery-ujs": "^1.2.2"
   },
   "devDependencies": {
     "webpack-dev-server": "2.11.2"
