--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "private": true,
   "dependencies": {
     "@rails/webpacker": "3.5",
-    "jquery-ujs": "^1.2.2"
+    "jquery-ujs": "^1.2.2",
+    "typeahead.js": "^0.11.1"
   },
   "devDependencies": {
     "webpack-dev-server": "2.11.2"
