--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+/config/credentials.yml.enc
 /public/packs
 /public/packs-test
 /node_modules
