--- a/.babelrc
+++ b/.babelrc
@@ -11,6 +11,7 @@
   ],
 
   "plugins": [
+    "transform-runtime",
     "syntax-dynamic-import",
     "transform-object-rest-spread",
     ["transform-class-properties", { "spec": true }]
