--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "private": true,
   "dependencies": {
     "@rails/webpacker": "3.5",
-    "jquery-ujs": "^1.2.2",
-    "typeahead.js": "^0.11.1"
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
+    "jquery-ujs": "^1.2.2"
   },
   "devDependencies": {
     "webpack-dev-server": "2.11.2"
